python/JavaParser.py
# Generated from /home/franciscone/Faculdade/Codigos/compilers/compiler/src/parser/JavaParser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JavaParser ( Parser ):

    grammarFileName = "JavaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'short'", "'byte'", "'int'", "'long'", 
                     "'char'", "<INVALID>", "'boolean'", "'new'", "'package'", 
                     "'import'", "'const'", "'instanceof'", "'goto'", "'class'", 
                     "'abstract'", "'final'", "'public'", "'private'", "'protected'", 
                     "'extends'", "'implements'", "'static'", "'this'", 
                     "'super'", "'transient'", "'volatile'", "'throw'", 
                     "'throws'", "'void'", "'synchronized'", "'native'", 
                     "'interface'", "'='", "'*='", "'/='", "'%='", "'+='", 
                     "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", 
                     "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", "'||'", 
                     "'&&'", "'=='", "'>='", "'<='", "'>'", "'<'", "'&'", 
                     "'|'", "'^'", "'!='", "'>>'", "'<<'", "'>>>'", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "'.'", "','", "'?'", 
                     "'!'", "':'", "'@'", "';'", "'~'", "'if'", "'else'", 
                     "'case'", "'default'", "'switch'", "'do'", "'while'", 
                     "'for'", "'break'", "'continue'", "'return'", "'try'", 
                     "'catch'", "'finally'", "'''" ]

    symbolicNames = [ "<INVALID>", "ESPACO", "COMENTARIO", "HEX_NUMERAL", 
                      "OCTAL_NUMERAL", "NUMERO", "INTEGER_TYPE_SUFFIX", 
                      "FLOAT_s", "EXP", "SHORT", "BYTE", "INT", "LONG", 
                      "CHAR", "FLOAT", "LOGICAL", "NEW", "PACKAGE", "IMPORT", 
                      "CONST", "INSTANCEOF", "GOTO", "CLASS", "ABSTRACT", 
                      "FINAL", "PUBLIC", "PRIVATE", "PROTECTED", "EXTENDS", 
                      "IMPLEMENTS", "STATIC", "THIS", "SUPER", "TRANSIENT", 
                      "VOLATILE", "THROW", "THROWS", "VOID", "SYNCHNOZED", 
                      "NATIVE", "INTERFACE", "IGUAL_ATRIB", "MULT_ATRIB", 
                      "DIV_ATRIB", "MOD_ATRIB", "ADD_ATRIB", "BIT_LEFT_ATRIB", 
                      "BIT_RIGHT_ATRIB", "U_BIT_RIGHT_ATRIB", "AND_ATRIB", 
                      "XOR_ATRIB", "OR_ATRIB", "ADD", "SUB", "MULT", "DIV", 
                      "INC", "DEC", "OR", "AND", "IGUAL", "MAIOR_IGUAL", 
                      "MENOR_IGUAL", "MAIOR", "MENOR", "BITAND", "BITOR", 
                      "CARET", "DIF", "SHIFT_RIGHT", "SHIFT_LEFT", "U_SHIFT_RIGHT", 
                      "AC", "FC", "ACH", "FCH", "AP", "FP", "PONTO", "VIRGULA", 
                      "INTERROGACAO", "EXCLAMACAO", "DOIS_PONTOS", "ARROBA", 
                      "PONTOV", "NOT", "IF", "ELSE", "CASE", "DEFAULT", 
                      "SWITCH", "DO", "WHILE", "FOR", "BREAK", "CONTINUE", 
                      "RETURN", "TRY", "CATCH", "FINALLY", "ASPAS", "STRING", 
                      "ID", "ERRO", "SYNCHRONIZED", "MOD", "DIGITO", "FLOAT_S", 
                      "LETRA", "NULL" ]

    RULE_compilationUnit = 0
    RULE_packageDeclaration = 1
    RULE_importDeclarations = 2
    RULE_importDeclaration = 3
    RULE_typeDeclarations = 4
    RULE_typeDeclaration = 5
    RULE_classDeclaration = 6
    RULE_classModifiers = 7
    RULE_classModifier = 8
    RULE_superRule = 9
    RULE_interfaces = 10
    RULE_interfaceTypeList = 11
    RULE_classBody = 12
    RULE_classBodyDeclarations = 13
    RULE_classBodyDeclaration = 14
    RULE_classMemberDeclaration = 15
    RULE_staticInitializer = 16
    RULE_constructorDeclaration = 17
    RULE_constructorModifiers = 18
    RULE_constructorModifier = 19
    RULE_constructorDeclarator = 20
    RULE_formalParameterList = 21
    RULE_formalParameter = 22
    RULE_throwsRule = 23
    RULE_classTypeList = 24
    RULE_constructorBody = 25
    RULE_explicitConstructorInvocation = 26
    RULE_fieldDeclaration = 27
    RULE_fieldModifiers = 28
    RULE_fieldModifier = 29
    RULE_variableDeclarators = 30
    RULE_variableDeclarator = 31
    RULE_variableDeclaratorId = 32
    RULE_variableInitializer = 33
    RULE_methodDeclaration = 34
    RULE_methodHeader = 35
    RULE_resultType = 36
    RULE_methodModifiers = 37
    RULE_methodModifier = 38
    RULE_methodDeclarator = 39
    RULE_methodBody = 40
    RULE_interfaceDeclaration = 41
    RULE_interfaceModifiers = 42
    RULE_interfaceModifier = 43
    RULE_extendsInterfaces = 44
    RULE_interfaceBody = 45
    RULE_interfaceMemberDeclarations = 46
    RULE_interfaceMemberDeclaration = 47
    RULE_constantDeclaration = 48
    RULE_constantModifiers = 49
    RULE_abstractMethodDeclaration = 50
    RULE_abstractMethodModifiers = 51
    RULE_abstractMethodModifier = 52
    RULE_arrayInitializer = 53
    RULE_variableInitializers = 54
    RULE_type = 55
    RULE_primitiveType = 56
    RULE_numericType = 57
    RULE_integralType = 58
    RULE_referenceType = 59
    RULE_classOrInterfaceType = 60
    RULE_classType = 61
    RULE_interfaceType = 62
    RULE_block = 63
    RULE_blockStatements = 64
    RULE_blockStatement = 65
    RULE_localVariableDeclarationStatement = 66
    RULE_localVariableDeclaration = 67
    RULE_statement = 68
    RULE_statementNoShortIf = 69
    RULE_statementWithoutTrailingSubstatement = 70
    RULE_labeledStatement = 71
    RULE_labeledStatementNoShortIf = 72
    RULE_expressionStatement = 73
    RULE_statementExpression = 74
    RULE_ifThenStatement = 75
    RULE_ifThenElseStatement = 76
    RULE_ifThenElseStatementNoShortIf = 77
    RULE_switchStatement = 78
    RULE_switchBlock = 79
    RULE_switchBlockStatementGroups = 80
    RULE_switchBlockStatementGroup = 81
    RULE_switchLabels = 82
    RULE_switchLabel = 83
    RULE_whileStatement = 84
    RULE_whileStatementNoShortIf = 85
    RULE_doStatement = 86
    RULE_forStatement = 87
    RULE_forStatementNoShortIf = 88
    RULE_forInit = 89
    RULE_forUpdate = 90
    RULE_statementExpressionList = 91
    RULE_breakStatement = 92
    RULE_continueStatement = 93
    RULE_returnStatement = 94
    RULE_throwsRuleStatement = 95
    RULE_synchronizedStatement = 96
    RULE_tryStatement = 97
    RULE_catches = 98
    RULE_catchClause = 99
    RULE_finallyRule = 100
    RULE_constantExpression = 101
    RULE_expression = 102
    RULE_assignmentExpression = 103
    RULE_assignment = 104
    RULE_leftHandSide = 105
    RULE_assignmentOperator = 106
    RULE_conditionalExpression = 107
    RULE_conditionalOrExpression = 108
    RULE_conditionalAndExpression = 109
    RULE_inclusiveOrExpression = 110
    RULE_exclusiveOrExpression = 111
    RULE_andExpression = 112
    RULE_equalityExpression = 113
    RULE_relationalExpression = 114
    RULE_shiftExpression = 115
    RULE_additiveExpression = 116
    RULE_multiplicativeExpression = 117
    RULE_castExpression = 118
    RULE_unaryExpression = 119
    RULE_preDecrementExpression = 120
    RULE_preIncrementExpression = 121
    RULE_unaryExpressionNotPlusMinus = 122
    RULE_postdecrementExpression = 123
    RULE_postincrementExpression = 124
    RULE_postfixExpression = 125
    RULE_methodInvocation = 126
    RULE_fieldAccess = 127
    RULE_primary = 128
    RULE_primaryNoNewArray = 129
    RULE_classInstanceCreationExpression = 130
    RULE_argumentlist = 131
    RULE_arrayCreationExpression = 132
    RULE_dimExprs = 133
    RULE_dimExpr = 134
    RULE_dims = 135
    RULE_arrayAccess = 136
    RULE_packageName = 137
    RULE_typeName = 138
    RULE_simpleTypeName = 139
    RULE_expressionName = 140
    RULE_methodName = 141
    RULE_ambiguousName = 142
    RULE_literal = 143
    RULE_integerLiteral = 144
    RULE_decimalIntegerLiteral = 145
    RULE_hexIntegerLiteral = 146
    RULE_octalIntegerLiteral = 147
    RULE_decimalNumeral = 148
    RULE_digits = 149
    RULE_floatingPointLiteral = 150
    RULE_exponentPart = 151
    RULE_exponentIndicator = 152
    RULE_signedInteger = 153
    RULE_sign = 154
    RULE_floatTypeSuffix = 155
    RULE_booleanLiteral = 156
    RULE_characterLiteral = 157
    RULE_stringLiteral = 158
    RULE_nullLiteral = 159

    ruleNames =  [ "compilationUnit", "packageDeclaration", "importDeclarations", 
                   "importDeclaration", "typeDeclarations", "typeDeclaration", 
                   "classDeclaration", "classModifiers", "classModifier", 
                   "superRule", "interfaces", "interfaceTypeList", "classBody", 
                   "classBodyDeclarations", "classBodyDeclaration", "classMemberDeclaration", 
                   "staticInitializer", "constructorDeclaration", "constructorModifiers", 
                   "constructorModifier", "constructorDeclarator", "formalParameterList", 
                   "formalParameter", "throwsRule", "classTypeList", "constructorBody", 
                   "explicitConstructorInvocation", "fieldDeclaration", 
                   "fieldModifiers", "fieldModifier", "variableDeclarators", 
                   "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
                   "methodDeclaration", "methodHeader", "resultType", "methodModifiers", 
                   "methodModifier", "methodDeclarator", "methodBody", "interfaceDeclaration", 
                   "interfaceModifiers", "interfaceModifier", "extendsInterfaces", 
                   "interfaceBody", "interfaceMemberDeclarations", "interfaceMemberDeclaration", 
                   "constantDeclaration", "constantModifiers", "abstractMethodDeclaration", 
                   "abstractMethodModifiers", "abstractMethodModifier", 
                   "arrayInitializer", "variableInitializers", "type", "primitiveType", 
                   "numericType", "integralType", "referenceType", "classOrInterfaceType", 
                   "classType", "interfaceType", "block", "blockStatements", 
                   "blockStatement", "localVariableDeclarationStatement", 
                   "localVariableDeclaration", "statement", "statementNoShortIf", 
                   "statementWithoutTrailingSubstatement", "labeledStatement", 
                   "labeledStatementNoShortIf", "expressionStatement", "statementExpression", 
                   "ifThenStatement", "ifThenElseStatement", "ifThenElseStatementNoShortIf", 
                   "switchStatement", "switchBlock", "switchBlockStatementGroups", 
                   "switchBlockStatementGroup", "switchLabels", "switchLabel", 
                   "whileStatement", "whileStatementNoShortIf", "doStatement", 
                   "forStatement", "forStatementNoShortIf", "forInit", "forUpdate", 
                   "statementExpressionList", "breakStatement", "continueStatement", 
                   "returnStatement", "throwsRuleStatement", "synchronizedStatement", 
                   "tryStatement", "catches", "catchClause", "finallyRule", 
                   "constantExpression", "expression", "assignmentExpression", 
                   "assignment", "leftHandSide", "assignmentOperator", "conditionalExpression", 
                   "conditionalOrExpression", "conditionalAndExpression", 
                   "inclusiveOrExpression", "exclusiveOrExpression", "andExpression", 
                   "equalityExpression", "relationalExpression", "shiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "castExpression", 
                   "unaryExpression", "preDecrementExpression", "preIncrementExpression", 
                   "unaryExpressionNotPlusMinus", "postdecrementExpression", 
                   "postincrementExpression", "postfixExpression", "methodInvocation", 
                   "fieldAccess", "primary", "primaryNoNewArray", "classInstanceCreationExpression", 
                   "argumentlist", "arrayCreationExpression", "dimExprs", 
                   "dimExpr", "dims", "arrayAccess", "packageName", "typeName", 
                   "simpleTypeName", "expressionName", "methodName", "ambiguousName", 
                   "literal", "integerLiteral", "decimalIntegerLiteral", 
                   "hexIntegerLiteral", "octalIntegerLiteral", "decimalNumeral", 
                   "digits", "floatingPointLiteral", "exponentPart", "exponentIndicator", 
                   "signedInteger", "sign", "floatTypeSuffix", "booleanLiteral", 
                   "characterLiteral", "stringLiteral", "nullLiteral" ]

    EOF = Token.EOF
    ESPACO=1
    COMENTARIO=2
    HEX_NUMERAL=3
    OCTAL_NUMERAL=4
    NUMERO=5
    INTEGER_TYPE_SUFFIX=6
    FLOAT_s=7
    EXP=8
    SHORT=9
    BYTE=10
    INT=11
    LONG=12
    CHAR=13
    FLOAT=14
    LOGICAL=15
    NEW=16
    PACKAGE=17
    IMPORT=18
    CONST=19
    INSTANCEOF=20
    GOTO=21
    CLASS=22
    ABSTRACT=23
    FINAL=24
    PUBLIC=25
    PRIVATE=26
    PROTECTED=27
    EXTENDS=28
    IMPLEMENTS=29
    STATIC=30
    THIS=31
    SUPER=32
    TRANSIENT=33
    VOLATILE=34
    THROW=35
    THROWS=36
    VOID=37
    SYNCHNOZED=38
    NATIVE=39
    INTERFACE=40
    IGUAL_ATRIB=41
    MULT_ATRIB=42
    DIV_ATRIB=43
    MOD_ATRIB=44
    ADD_ATRIB=45
    BIT_LEFT_ATRIB=46
    BIT_RIGHT_ATRIB=47
    U_BIT_RIGHT_ATRIB=48
    AND_ATRIB=49
    XOR_ATRIB=50
    OR_ATRIB=51
    ADD=52
    SUB=53
    MULT=54
    DIV=55
    INC=56
    DEC=57
    OR=58
    AND=59
    IGUAL=60
    MAIOR_IGUAL=61
    MENOR_IGUAL=62
    MAIOR=63
    MENOR=64
    BITAND=65
    BITOR=66
    CARET=67
    DIF=68
    SHIFT_RIGHT=69
    SHIFT_LEFT=70
    U_SHIFT_RIGHT=71
    AC=72
    FC=73
    ACH=74
    FCH=75
    AP=76
    FP=77
    PONTO=78
    VIRGULA=79
    INTERROGACAO=80
    EXCLAMACAO=81
    DOIS_PONTOS=82
    ARROBA=83
    PONTOV=84
    NOT=85
    IF=86
    ELSE=87
    CASE=88
    DEFAULT=89
    SWITCH=90
    DO=91
    WHILE=92
    FOR=93
    BREAK=94
    CONTINUE=95
    RETURN=96
    TRY=97
    CATCH=98
    FINALLY=99
    ASPAS=100
    STRING=101
    ID=102
    ERRO=103
    SYNCHRONIZED=104
    MOD=105
    DIGITO=106
    FLOAT_S=107
    LETRA=108
    NULL=109

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packageDeclaration(self):
            return self.getTypedRuleContext(JavaParser.PackageDeclarationContext,0)


        def importDeclarations(self):
            return self.getTypedRuleContext(JavaParser.ImportDeclarationsContext,0)


        def typeDeclarations(self):
            return self.getTypedRuleContext(JavaParser.TypeDeclarationsContext,0)


        def getRuleIndex(self):
            return JavaParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = JavaParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 321
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JavaParser.PACKAGE:
                self.state = 320
                self.packageDeclaration()


            self.state = 324
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JavaParser.IMPORT:
                self.state = 323
                self.importDeclarations(0)


            self.state = 327
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaParser.CLASS) | (1 << JavaParser.ABSTRACT) | (1 << JavaParser.FINAL) | (1 << JavaParser.PUBLIC) | (1 << JavaParser.INTERFACE))) != 0):
                self.state = 326
                self.typeDeclarations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackageDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(JavaParser.PACKAGE, 0)

        def packageName(self):
            return self.getTypedRuleContext(JavaParser.PackageNameContext,0)


        def getRuleIndex(self):
            return JavaParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)




    def packageDeclaration(self):

        localctx = JavaParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 329
            self.match(JavaParser.PACKAGE)
            self.state = 330
            self.packageName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportDeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDeclaration(self):
            return self.getTypedRuleContext(JavaParser.ImportDeclarationContext,0)


        def importDeclarations(self):
            return self.getTypedRuleContext(JavaParser.ImportDeclarationsContext,0)


        def getRuleIndex(self):
            return JavaParser.RULE_importDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclarations" ):
                listener.enterImportDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclarations" ):
                listener.exitImportDeclarations(self)



    def importDeclarations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JavaParser.ImportDeclarationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_importDeclarations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 333
            self.importDeclaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 339
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = JavaParser.ImportDeclarationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_importDeclarations)
                    self.state = 335
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 336
                    self.importDeclaration() 
                self.state = 341
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ImportDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(JavaParser.IMPORT, 0)

        def typeName(self):
            return self.getTypedRuleContext(JavaParser.TypeNameContext,0)


        def packageName(self):
            return self.getTypedRuleContext(JavaParser.PackageNameContext,0)


        def PONTO(self):
            return self.getToken(JavaParser.PONTO, 0)

        def MULT(self):
            return self.getToken(JavaParser.MULT, 0)

        def getRuleIndex(self):
            return JavaParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)




    def importDeclaration(self):
